fixed spacing issue on mobile; reversed columns on about page

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -344,7 +344,7 @@ table {
 }
 
 div#about_container, div#contact_container {
-	padding-top: 65px;
+	padding-top: 6%;
 }
 
 div#admin_container {
